complete feature get all races by year or grandPrix
