# src/dtos/race/race_year_grand_prix_request_dto.ts
@@ -1,0 +1,4 @@
+export interface RaceYearGrandPrixRequestDto {
+  year?: string;
+  grandPrix?: string;
+}
