# src/swagger.json
@@ -18,11 +18,94 @@
     "consumes": ["application/json"],
     "produces": ["application/json"],
     "schemes": ["http", "https"],
-    "paths": {},
+    "paths": {
+        "/api/race": {
+            "get": {
+                "tags": ["Race"],
+                "summary": "Get all races by year or grandPrix in the system",
+                "parameters": [{
+                        "in": "query",
+                        "name": "year",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "Please input year"
+                    },
+                    {
+                        "in": "query",
+                        "name": "grandPrix",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "Please input grandPrix"
+                    }
+                ],
+                "produces": ["application/json"],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "#ref": "#/definitions/Race"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        }
+    },
     "definitions": {
-        "id": {
+        "Race": {
+            "type": "object",
             "properties": {
-                "uuid": {
+                "raceId": {
+                    "type": "number"
+                },
+                "grandPrix": {
+                    "type": "string"
+                },
+                "raceDate": {
+                    "type": "string",
+                    "format": "date"
+                },
+                "winner": {
+                    "type": "string"
+                },
+                "car": {
+                    "type": "string"
+                },
+                "laps": {
+                    "type": "number"
+                },
+                "time": {
+                    "type": "string"
+                }
+            },
+            "example": {
+                "raceId": 1,
+                "grandPrix": "Bahrain",
+                "raceDate": "2022-03-05T00:00:00.000Z",
+                "winner": "Max Verstappen",
+                "car": "RED BULL RACING HONDA RBPT",
+                "laps": 57,
+                "time": "01:33:56.740"
+            }
+        },
+        "GetAllRacesRequest": {
+            "type": "object",
+            "properties": {
+                "year": {
+                    "type": "string"
+                },
+                "grandPrix": {
                     "type": "string"
                 }
             }
